# henze-ds

./: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: cache-warmup.yml  daily-bets.yml  oracle-vm-discord-deploy.yml
henze-ds/: Cargo.toml
henze-ds-cli/: Cargo.toml
henze-ds-cli/src/: cli.rs  main.rs  output.rs
henze-ds-discord/: Cargo.toml  README.md  henze_bets.db  system_prompt.txt
henze-ds-discord/deploy/oracle/: .gitignore  README.md  docker-compose.yml
henze-ds-discord/deploy/oracle/instances/: alpha.env.example
henze-ds-discord/docker/: discord-bot.Dockerfile
henze-ds-discord/src/: config.rs  db.rs  main.rs  openai.rs  settlement.rs
henze-ds-discord/src/commands/: mod.rs  new_run.rs  place_bet.rs  run_status.rs
henze-ds-discord/src/discord/: handler.rs  messages.rs  mod.rs
henze-ds-web/: Cargo.toml  Rocket.toml
henze-ds-web/src/: cache.rs  handlers.rs  main.rs  models.rs  utils.rs
henze-ds-web/static/: script.js  style.css
henze-ds-web/templates/: index.html.tera
henze-ds/src/: lib.rs
henze-ds/src/ds_client/: client.rs  schema.json  schema.rs
schema-flex/: Cargo.toml
schema-flex/src/: main.rs
src/: main.rs
src/ds_client/: schema.rs
