[package]
name = "ds-henze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
typify = "0.2.0"
