[package]
name = "henze_ds"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
typify = "0.2.0"

[lib]
name = "henze_ds"
path = "src/lib.rs"